--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 		<div class="container">
 			<div class="about">
 				<div class="about-author">
-					<img src="me.jpg">
+					<img src="image/me.jpg">
 				</div>
 				<h1 class="about-title">About Me</h3>
 				<div class="about-content">
